# QZ

./: .Rbuildignore  .gitignore  .gitlab-ci.yml  .travis.yml  ChangeLog  DESCRIPTION  INSTALL  NAMESPACE  README  README.md  TODO  appveyor.yml  cleanup  configure  configure.ac
R/: qz_dgees.r  qz_dgges.r  qz_dggev.r  qz_dtgsen.r  qz_dtrsen.r  qz_zgees.r  qz_zgges.r  qz_ztgsen.r  qz_ztrsen.r  s3_ordqz.r  s3_qz_geigen.r
data/: example_A.r  example_AB.r
demo/: 00Index  ex1_geigen.r  ex1_qz_geigen.r  ex2_qz.r  ex3_ordqz.r
inst/: CITATION
inst/doc/: QZ-guide.Rnw
inst/doc/QZ-include/: 00-preamble.tex  01-acknowledgement.tex  01-introduction.tex  02-method.tex  03-implementation.tex  04-data_example.tex  QZ.bib
inst/doc/vignettes/: QZ-guide.Rnw
inst/doc/vignettes/QZ-include/: 05-conclusion.tex  QZ.bib
inst/ex_verify/: dexA1_zgees.r  dexA1_zgeev.r  dexA2_dgees.r  dexA2_dgeev.r  dexA3_ztrsen.r  dexA4_dtrsen.r  dexAB1_zgges.r  dexAB1_zggev.r  dexAB2_dgges.r  dexAB2_dggev.r  dexAB3_ztgsen.r  dexAB4_dtgsen.r  run_all.sh
man/: 00_QZ-package.Rd  11_example.Rd  21_qz_geigen.Rd  22_fda_geigen.Rd  23_qz.Rd  24_ordqz.Rd  30_fda_geigen.Rd  aa_qz_zgges.Rd  aa_qz_zggev.Rd  ac_qz_ztgsen.Rd  bb_qz_dgges.Rd  bb_qz_dggev.Rd  bc_qz_dtgsen.Rd  cc_qz_zgees.Rd  cc_qz_zgeev.Rd  cc_qz_ztrsen.Rd  dd_qz_dgees.Rd  dd_qz_dgeev.Rd  dd_qz_dtrsen.Rd  xx_print.method.Rd  yy_transpose.Rd
src/: Makevars  Makevars.in  Makevars.win  R_dgees.c  R_dgeev.c  R_dgges.c  R_dggev.c  R_dtgsen.c  R_dtrsen.c  R_qz_global.h  R_zgees.c  R_zgeev.c  R_zgges.c  R_zggev.c  R_ztgsen.c  R_ztrsen.c  wdgees.f  wdgeev.f  wdgges.f  wdggev.f  wdtgsen.f  wdtrsen.f  wzgees.f  wzgeev.f  wzgges.f  wzggev.f  wztgsen.f  wztrsen.f  zzz.c  zzz.h
src-i386/: R_dgees.c  R_dgeev.c  R_dgges.c  R_dtrsen.c  R_zgees.c  R_zgeev.c  R_zgges.c  R_zggev.c  R_ztgsen.c
src-i386/qz/: xerbla.f
src/qz/: xerbla.f  zgees.f  zggbak.f  zggbal.f  zgges.f  zggev.f  zgghrd.f  zhgeqz.f  ztgevc.f  ztgsy2.f  ztgsyl.f  ztrsen.f  ztrsyl.f  zunmhr.f  zunmqr.f
vignettes/: QZ-guide.Rnw  build_pdf.sh
vignettes/QZ-include/: 01-acknowledgement.tex  01-introduction.tex  02-method.tex  03-implementation.tex  04-data_example.tex  QZ.bib  jss.cls
